
2009-04-23 (dazjorz)
 * Added getLikeBackUrl() function to functions.inc.php to return the HTTP path
 to this LikeBack instance.
 * Added sendReminders script and template, which should be run by crontab
 every week, to e-mail all developers of their remaining comments.
 * Fixed warning in functions.php which appeared when an unknown developer
 visited the site.
 * Commented out Context tab in the commenttable.tpl since it's not needed
 right now.
 * Made version instead of fullVersion shown in commenttable, and fullVersion
 when you hover it with the mouse.
 * Moved and fixed sendMailTo() to functions.inc.php so send.php can use it too.
 * Added application logo, preferences box and awful LikeBack logo to the top
 bar.
 * Made the table use the full width of the screen, even if that space isn't
 needed.
 * Fixed some bugs in comment.php which were caused by earlier changes.
 * E-mails about an added comment are now sent From $useraddress, Sender
 $likebackMail, replyTo $likebackMail.
 * Made comment.php also send e-mails to every interested developer when a
 remark is added.
 * Workarounded a PHP bug in e-mail word wrapping when a line was exactly 80
 characters.
 * Some other interface changes.
 * Made options.php use lbHeader() and subBar() correctly, so the likeback
 logo shows there too.

2009-04-22 (dazjorz)
 * Added functions.inc.php with validStatuses(), validTypes() and
 maybeStrip().
 * Started using these three functions throughout the code.
 * Added two (production-safe) warnings to functions.php (yes, the other
 functions file).
 * Added db_fetchAll() function to fetch all objects returned by a query, and 
 used it in view.php.
 * Added db_buildQuery_checkArray() function to build the conditional part of
 a query based on an element name and an array of possible values.
 * Revised the way view.php creates a conditional query using
 db_buildQuery_checkArray().
 * Implemented a version split in send.php: '2.0beta1-svn (4658 >= 20090421)'