@@ -1,0 +1,13 @@
+<!DOCTYPE html
+  PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+ <head>
+  <title>{$pageTitle} - LikeBack</title>
+  <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=UTF-8"/>
+  <link rel="stylesheet" type="text/css" href="style.css"/>
+  <script type="text/javascript" src="xmlhttprequest.js"></script>
+  <script type="text/javascript" src="jsUtilities.js"></script>
+  <script type="text/javascript" src="scripts.js"></script>
+ </head>
+ <body onmousedown="hideStatusMenu(event)">
