@@ -1,7 +1,7 @@
   
   <div class="header">
-    <img id="applogo" src="{$appLogo|escape:'html'}" height="80" />
-    <img id="lblogo" src="icons/likeback.png"/>
+    <img id="applogo" src="{$appLogo|escape:'html'}" height="80" alt="Application logo"/>
+    <img id="lblogo" src="icons/likeback.png" alt="LikeBack logo"/>
     <div id="lbinfo">Logged in as {$developer->login} - <a href="options.php">preferences</a></div>
   {$contents}
   </div>
