@@ -9,26 +9,26 @@
      <table>
       <tr>
        <td style="vertical-align: top">
-        <strong>Type:</strong><br>
-        <input type="checkbox" name="MatchLike" id="MatchLike" {$likeChecked}><label for="MatchLike">Like</label><br>
-        <input type="checkbox" name="MatchDislike" id="MatchDislike" {$dislikeChecked}><label for="MatchDislike">Do not like</label><br>
-        <input type="checkbox" name="MatchBug" id="MatchBug" {$bugChecked}><label for="MatchBug">Bug</label><br>
-        <input type="checkbox" name="MatchFeature" id="MatchFeature" {$featureChecked}><label for="MatchFeature">Feature</label>
+        <strong>Type:</strong><br/>
+        <input type="checkbox" name="MatchLike" id="MatchLike" {$likeChecked}/><label for="MatchLike">Like</label><br/>
+        <input type="checkbox" name="MatchDislike" id="MatchDislike" {$dislikeChecked}/><label for="MatchDislike">Do not like</label><br/>
+        <input type="checkbox" name="MatchBug" id="MatchBug" {$bugChecked}/><label for="MatchBug">Bug</label><br/>
+        <input type="checkbox" name="MatchFeature" id="MatchFeature" {$featureChecked}/><label for="MatchFeature">Feature</label>
        </td>
        <td style="vertical-align: top">
-        <strong>Locale:</strong><br>
+        <strong>Locale:</strong><br/>
 {section name=i loop=$locales}
 {assign var=locale value="`$locales[i]->locale`"|escape}
 {if matchLocale($developer->locales, $locale)}{assign var=checked value='checked="checked"'}{else}{assign var=checked value=''}{/if}
-        <input type="checkbox" name="MatchLocale_{$locale}" id="MatchLocale_{$locale}" {$checked}><label for="MatchLocale_{$locale}">{$locale}</label><br>
+        <input type="checkbox" name="MatchLocale_{$locale}" id="MatchLocale_{$locale}" {$checked}/><label for="MatchLocale_{$locale}">{$locale}</label><br/>
 {/section}
 {if matchLocale($developer->locales, "*")}{assign var=checked value='checked="checked"'}{else}{assign var=checked value=''}{/if}
-        <input type="checkbox" name="MatchOtherLocales" id="MatchOtherLocales" {$checked}><label for="MatchOtherLocales">Others</label>
+        <input type="checkbox" name="MatchOtherLocales" id="MatchOtherLocales" {$checked}/><label for="MatchOtherLocales">Others</label>
        </td>
       </tr>
      </table>
     </div>
-    <p style="text-align: center"><input type="submit" name="saveOptions" value="Ok"></p>
+    <p style="text-align: center"><input type="submit" name="saveOptions" value="Ok"/></p>
    </form>
 
    <script type="text/javascript">
