@@ -1,10 +1,10 @@
   <div id="statusMenu">
    <strong>Mark As:</strong>
-   <a id="markAsNew"       href="#"><img src="icons/new.png"       width="16" height="16" alt="" />New</a>
-   <a id="markAsConfirmed" href="#"><img src="icons/confirmed.png" width="16" height="16" alt="" />Confirmed</a>
-   <a id="markAsProgress"  href="#"><img src="icons/progress.png"  width="16" height="16" alt="" />In progress</a>
-   <a id="markAsSolved"    href="#"><img src="icons/solved.png"    width="16" height="16" alt="" />Solved</a>
-   <a id="markAsInvalid"   href="#"><img src="icons/invalid.png"   width="16" height="16" alt="" />Invalid</a>
+   <a id="markAsNew"       href="#"><img src="icons/new.png"       width="16" height="16" alt="New" />New</a>
+   <a id="markAsConfirmed" href="#"><img src="icons/confirmed.png" width="16" height="16" alt="Confirmed" />Confirmed</a>
+   <a id="markAsProgress"  href="#"><img src="icons/progress.png"  width="16" height="16" alt="In progress" />In progress</a>
+   <a id="markAsSolved"    href="#"><img src="icons/solved.png"    width="16" height="16" alt="Solved" />Solved</a>
+   <a id="markAsInvalid"   href="#"><img src="icons/invalid.png"   width="16" height="16" alt="Invalid" />Invalid</a>
 <!--
    <strong>Duplicate Of:</strong>
    <a id="markAsDuplicate" href="#"><img src="icons/duplicate.png" width="16" height="16" alt="" />Choose...</a>
